@startuml Bombonica

    title Ecommerce Bombonica - UML

    class Usuario {
        - id: Long
        - nome: String
        - email: String
        - senha: String
        - cpf: String
       
    }

    class Telefone {
        - id: Long
        - codigoArea: String
        - numero: String
    }

    enum TipoTelefone {
        WHATSAPP,
        CELULAR,
    }

    class Endereco {
        - id: Long
        - logradouro: String
        - bairro: String
        - numero: String
        - complemento: String
        - cep: String
    }

    class Municipio{
        - nome: String
    }

    class Estado {
        - nome: String
    }

    class Compra {
        - id: Long
        - data: Date
        - valorTotal: Double 
    }

    class ItemProduto {
        - id: long
        - quantidade: Integer
        - preco: Double
    }

    class Produto {
        - id: Long
        - nome: String
        - descricao: String
        - preco: Double
        - estoque: Integer
    }

    class BarraChocolate {
        - peso: Double
        - ingredientes: String
    }

    enum TipoChocolate {
        AO_LEITE,
        AMARGO,
        BRANCO,
        MEIO_AMARGO,
    }

    class Promocao {
        - id: Long
        - descricao: String
    }

    class CupomDesconto {
        - id: Long
        - codigo: String
        - valorDesconto: Double
    }

    class ListaDesejo {
        - id: Long
        - valorTotal: Double
    }

    Usuario "1" *--> "1" Telefone: Whatsapp
    Usuario "1" *--> "1" Telefone: Celular
    Telefone "1" *--> "*" TipoTelefone

    Usuario "1" *--> "*" Endereco
    Endereco "1" --> "1" Municipio
    Endereco "1" --> "1" Estado
    Estado "1" *--> "*" Municipio

    Usuario "1" --> "*" Compra
    Compra "1" --> "*" ItemProduto
    ItemProduto "1" *--> "1" Produto
    BarraChocolate "1" --> "*" TipoChocolate 
    
    Produto <|-- BarraChocolate

    Usuario "1" *--> "1" ListaDesejo
    ListaDesejo "1" --> "*" ItemProduto 	
    Compra "1" --> "1" CupomDesconto
    Promocao "1" --> "1" CupomDesconto
    Promocao "1" *--> "*" Produto

@enduml